--- a/package.json
+++ b/package.json
@@ -1,12 +1,6 @@
 {
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.1",
-    "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
-  },
-  "devDependencies": {
-    "@webpack-cli/generators": "^3.0.7"
+    "axios": "^1.7.9",
+    "cors": "^2.8.5"
   }
 }
