--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "axios": "^1.7.9",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "react-router-dom": "^7.2.0",
+    "webpack": "^5.98.0"
   }
 }
