--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "stream-browserify": "^3.0.0"
   }
 }
