--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "axios": "^1.8.1",
     "cors": "^2.8.5",
+    "formik": "^2.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
